<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vnote</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title_activity_new_note">New note</string>
    <string name="notes">Notes</string>
    <string name="tv_tittle"><u>Title</u></string>
    <string name="note_title">Note title</string>
    <string name="tv_content"><u>Content</u></string>
    <string name="note_content">Contents of the note</string>
    <string name="save">Save</string>
    <string name="speach">Speech</string>
    <string name="listen">Listen</string>
    <string name="send">Send</string>
    <string name="importlast">Import from last version</string>
    <string name="lenguage">Language</string>
    <string name="lenguage_sumary">Select the application language</string>
    <string name="order">Order</string>
    <string name="order_sumary">Order by &#8230;</string>
    <string name="files_not_found">No files found in the folder</string>
    <string name="save_ok">Save Successfully</string>
    <string name="note_exists">Already exist a note with that title</string>
    <string name="empty_fields">Someone fields is empty</string>
    <string name="by_date">By Date</string>
    <string name="by_title">By Title</string>
    <string name="english">English</string>
    <string name="spanish">Spanish (Castilian)</string>
    <string name="portuguese">Portuguese</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning_delete">Do you want to DELETE the following note/s?</string>

</resources>