<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.serieadicto.MainActivity" >

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:title="@string/search"/>
   <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/delete"/>
      <item
        android:id="@+id/send"
        android:icon="@android:drawable/ic_menu_send"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/send"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>