<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/black"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:inputType="textCapSentences"
            android:hint="@string/note_title"
            android:textColor="@color/white" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/tv_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="184dp"
            android:ems="10"
            android:hint="@string/note_content"
            android:inputType="textMultiLine|textCapSentences"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:text="@string/tv_tittle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </RelativeLayout>

</ScrollView>